# battlesnake-cli-enhanced

./: .gitignore  README.md  main.py  pyproject.toml
docs/plans/: 2026-02-25-test-command-design.md  2026-02-25-test-command.md
python/battlesnake_cli/: __init__.py  __main__.py  app.py  binary.py  config.py  game_runner.py  models.py  snake_manager.py
